# config-reader

./: .gitignore  .travis.yml  CMakeLists.txt  InstallPackages  LICENSE  README.md  package.xml
examples/: Makefile  config.lua  config2.lua  config3.lua  example  example.cc  interactive_demo.cc  multi_file_example  multi_file_example.cc  test_config.lua  test_config2.lua  tests.cc
include/config_reader/: config_reader.h  lua_script.h  macros.h
include/config_reader/types/: config_generic.h  config_numeric.h  type_interface.h
