<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>config_reader</name>
  <version>0.1.0</version>
  <description>Header-only config reader library packaged for ROS 2 colcon workspaces.</description>
  <maintainer email="amrl_robot@cs.utexas.edu">amrl_robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>liblua5.2-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
